# audience

./: .env.example  .gitignore  .prettierignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  vercel.json
.github/workflows/: ci.yml  desktop-release.yml
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: .eslintrc.json  instrumentation.ts  next.config.mjs  package.json  playwright.config.ts  sentry.client.config.ts  sentry.server.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vercel.json  vitest.config.ts  vitest.setup.ts
docs/: wordcloud-followups.md
docs/plans/: 2026-05-15-multi-slide.md
docs/runbooks/: incidente-evento-ao-vivo.md
supabase/: config.toml  seed.sql
supabase/migrations/: 00010000_themes.sql  00020000_events.sql  00030000_submissions.sql  00040000_submit_comment_rpc.sql  00050000_pairing_codes.sql  00060000_moderation_rpcs.sql  00070000_pairing_rpcs.sql  00080000_tighten_function_grants.sql  00090000_revoke_anon_from_moderation.sql  00100000_invitations.sql  00110000_dispatch_interval.sql  00120000_telao_modes.sql  00130000_per_mode_configs.sql  00140000_realtime_publication.sql  00150000_events_realtime.sql  00160000_claim_submission_atomic.sql  00170000_rate_limit_per_event.sql  00180000_telao_public_rpc.sql  00190000_moderator_tokens.sql  00200000_claim_submission_fix_ambiguous.sql  00210000_token_approve_to_sent.sql  00220000_event_collaboration.sql  (+38 more)
(+219 files in other folders)
