[package]
name = "audience-desktop"
version = "0.1.0"
description = "Janela transparente always-on-top que mostra comentarios aprovados da audiencia"
authors = ["Audience"]
license = "MIT"
repository = "https://github.com/davialvescine/audience"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "audience_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.0", features = ["macos-private-api"] }
tauri-plugin-log = "2"
